plugins {
    id 'java'
    id 'checkstyle'
    id 'application'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

group = 'org.p2c'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

task runWorker(type: JavaExec) {
    mainClass = 'org.worker.WorkerApplication'
    classpath = sourceSets.main.runtimeClasspath
}

dependencies {
    implementation 'io.netty:netty-all:4.1.99.Final'
    implementation 'jakarta.inject:jakarta.inject-api:2.0.1'
    implementation 'javax.annotation:javax.annotation-api:1.3.2'
    implementation 'com.google.inject:guice:7.0.0'
    implementation 'com.google.inject.extensions:guice-servlet:7.0.0'
    compileOnly "jakarta.servlet:jakarta.servlet-api:6.0.0"
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
    implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
    implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'org.slf4j:slf4j-api:2.0.9'
    implementation 'ch.qos.logback:logback-classic:1.4.11'


    implementation 'org.json:json:20250517'

    compileOnly 'org.projectlombok:lombok:1.18.32'
    annotationProcessor 'org.projectlombok:lombok:1.18.32'
    
    testCompileOnly 'org.projectlombok:lombok:1.18.32'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.32'

    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

checkstyle {
    toolVersion = '10.12.3'
    configFile = file("$rootDir/config/checkstyle/checkstyle.xml")
    configProperties = [
            'checkstyle.cache.file': "$buildDir/checkstyle-cachefile"
    ]
}

test {
    useJUnitPlatform()
}
